--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -41,7 +41,7 @@
 
 .images {
   display: grid;
-  grid-template-columns: repeat( auto-fit, minmax(12rem, 1fr) );
+  grid-template-columns: repeat(5, minmax(12rem, 1fr));
   grid-gap: 0.5rem;
   margin: 1.5rem 0;
 }
@@ -55,4 +55,4 @@
   object-fit: cover;
   width: 100%;
   height: 100%;
-} 
+}
